--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "dev": "astro dev",
-    "test": "vitest",
+    "test": "vitest run",
     "host": "astro dev --host",
     "start": "astro dev",
     "check": "astro check",
@@ -37,7 +37,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-use": "^17.5.1",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "vitest": "^2.0.5"
   },
   "devDependencies": {
     "@astrojs/mdx": "^3.1.3",
@@ -66,13 +67,12 @@
     "postcss-nesting": "^13.0.0",
     "postcss-pow": "^1.0.1",
     "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
     "stylelint": "^16.8.2",
     "stylelint-config-html": "^1.1.0",
     "stylelint-prettier": "^5.0.2",
     "typescript": "^5.5.4",
-    "typescript-eslint": "^8.1.0",
-    "vite": "^5.4.1",
-    "vitest": "^2.0.5"
+    "typescript-eslint": "^8.1.0"
   },
   "engines": {
     "node": ">= 20.11.0 <21 || >= 21.2.0",
