--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "vitest run",
     "host": "astro dev --host",
     "start": "astro dev",
-    "check": "astro check",
-    "build": "astro check && astro build",
+    "check-types": "astro check",
+    "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
     "lint": "eslint",
@@ -22,7 +22,7 @@
     "inspect": "eslint --inspect-config"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.2",
+    "@astrojs/check": "^0.9.3",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/vercel": "^7.7.2",
@@ -75,11 +75,13 @@
     "stylelint": "^16.8.2",
     "stylelint-config-html": "^1.1.0",
     "stylelint-prettier": "^5.0.2",
+    "turbo": "^2.0.14",
     "typescript": "^5.5.4",
-    "typescript-eslint": "^8.1.0"
+    "typescript-eslint": "^8.2.0"
   },
   "engines": {
-    "node": "20.x"
+    "node": ">= 20.11.0 <21 || >= 21.2.0",
+    "pnpm": ">=9.1.2"
   },
   "packageManager": "pnpm@9.7.1"
 }
