--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
-  "name": "every-layout-1",
+  "name": "everylayout-astro",
   "type": "module",
-  "version": "1.0.0",
+  "private": true,
+  "version": "2.0.0",
   "imports": {
     "#*": "./src/*"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mconnor/everylayout-astro.git"
+  },
+  "keywords": [
+    "vite",
+    "eslint",
+    "astro"
+  ],
   "scripts": {
     "dev": "astro dev",
     "test": "vitest run",
