--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "eslint-plugin-markdown": "^5.1.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-regexp": "^2.6.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-wc": "^2.2.0",
     "globals": "^15.12.0",
     "postcss": "^8.4.47",
