--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/vercel": "^7.8.2",
     "@preact/signals": "^1.3.0",
-    "@sentry/astro": "^8.37.1",
+    "@sentry/astro": "^8.38.0",
     "@webcomponents/template-shadowroot": "^0.2.1",
     "add": "^2.0.6",
-    "astro": "^4.16.10",
+    "astro": "^4.16.12",
     "date-fns": "^4.1.0",
     "nanostores": "^0.11.3",
     "open-props": "^1.7.7",
@@ -50,12 +50,11 @@
     "react-dom": "^18.3.1",
     "react-use": "^17.5.1",
     "sharp": "^0.33.5",
-    "vitest": "^2.1.4"
+    "vitest": "^2.1.5"
   },
   "devDependencies": {
     "@astrojs/mdx": "^3.1.9",
     "@astrojs/react": "^3.6.2",
-    "@eslint/compat": "^1.2.2",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.14.0",
     "@eslint/markdown": "^6.2.1",
@@ -63,10 +62,11 @@
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint-plugin-markdown": "^2.0.2",
     "@types/eslint__js": "^8.42.3",
+    "@types/node": "^22.9.0",
     "@types/postcss-import": "^14.0.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "astro-eslint-parser": "^1.0.3",
+    "astro-eslint-parser": "^1.1.0",
     "autoprefixer": "^10.4.20",
     "canvas-confetti": "^1.9.3",
     "eslint": "^9.14.0",
@@ -77,7 +77,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-wc": "^2.2.0",
     "globals": "^15.12.0",
-    "postcss": "^8.4.47",
+    "postcss": "^8.4.49",
     "postcss-html": "^1.7.0",
     "postcss-import": "^16.1.0",
     "postcss-jit-props": "^1.0.14",
@@ -90,11 +90,11 @@
     "stylelint-prettier": "^5.0.2",
     "turbo": "^2.2.3",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.13.0"
+    "typescript-eslint": "^8.14.0"
   },
   "engines": {
-    "node": ">= 20.11.0 <21 || >= 21.2.0",
+    "node": ">= 20.11.0 <21 || >= 22.9.0",
     "pnpm": ">=9.1.2"
   },
-  "packageManager": "pnpm@9.12.3"
+  "packageManager": "pnpm@9.13.0"
 }
