--- a/package.json
+++ b/package.json
@@ -93,8 +93,8 @@
     "typescript-eslint": "^8.14.0"
   },
   "engines": {
-    "node": ">= 20.11.0 <21 || >= 22.9.0",
+    "node": "^22.2.0",
     "pnpm": ">=9.1.2"
   },
-  "packageManager": "pnpm@9.13.0"
+  "packageManager": "pnpm@9.14.2"
 }
