--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/vercel": "^7.8.2",
+    "@astrojs/vercel": "8.0.0-beta.4",
     "@preact/signals": "^1.3.0",
     "@sentry/astro": "^8.38.0",
     "@webcomponents/template-shadowroot": "^0.2.1",
     "add": "^2.0.6",
-    "astro": "^4.16.12",
+    "astro": "5.0.0-beta.10",
     "date-fns": "^4.1.0",
     "nanostores": "^0.11.3",
     "open-props": "^1.7.7",
@@ -53,8 +53,8 @@
     "vitest": "^2.1.5"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^3.1.9",
-    "@astrojs/react": "^3.6.2",
+    "@astrojs/mdx": "4.0.0-beta.3",
+    "@astrojs/react": "3.6.3-beta.0",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.14.0",
     "@eslint/markdown": "^6.2.1",
